added changes to prev 3 files

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,9 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
+body {
+  background-color: #007700; /* Green color resembling a casino table */
+}
+
 .card {
   width: 200px;
   height: 300px;
